<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_active"
        android:id="@+id/activeToggleButton"
        android:layout_marginTop="87dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/doneButton"/>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_premium"
        android:id="@+id/premiumToggleButton"
        android:layout_below="@+id/activeToggleButton"
        android:layout_alignStart="@+id/activeToggleButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_done"
        android:id="@+id/doneButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/active_text"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/activeToggleButton"
        android:layout_alignStart="@+id/textView2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/premium_text"
        android:id="@+id/textView2"
        android:layout_below="@+id/activeToggleButton"
        android:layout_toStartOf="@+id/premiumToggleButton"
        android:layout_marginEnd="40dp"/>
</RelativeLayout>
